--- a/web/package.json
+++ b/web/package.json
@@ -82,8 +82,7 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.6.0",
     "yargs": "^3.9.0",
-    "angular-svg-round-progressbar": "0.4.8",
-    "angular-google-maps": "3.1.1"
+    "angular-svg-round-progressbar": "0.4.8"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
