Updated docker file

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -25,10 +25,11 @@ COPY . /app
 RUN echo "{ \"token\": \"$TSD_GITHUB_TOKEN\" }" >> /app/.tsdrct
 RUN cd /app && ./node_modules/.bin/tsd rate
 
-RUN ["npm", "run", "install_typings"]
-RUN ["npm", "run", "transpile"]
+RUN /install_typings.sh
+RUN /transpile.sh
 
 RUN chmod -R 777 /app /usr/bin
+RUN run.sh
 
-CMD ["npm", "start"]
+#CMD ["run", "run"]
 
